force-app/main/default/objects/Local_Customer__c/Local_Customer__c.object-meta.xml
<CustomObject>
    <description>Custom object to provide sales with 2 to 3 customers from the same local geography as the lead they are dialing to increase DM Connect and Set Rate</description>
    <label>Local Customer</label>
    <nameField>
        <displayFormat>LC{00000000}</displayFormat>
        <label>Local Customer Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Local Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>