force-app/main/default/objects/Local_Customer__c/fields/Account_1_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_1_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account 1 ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Local Customers 1</relationshipLabel>
    <relationshipName>Local_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>