force-app/main/default/objects/Local_Customer__c/fields/Account_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_1_Name__c</fullName>
    <formula>Account_1_ID__r.Name</formula>
    <label>Account 1 Name</label>
    <type>Text</type>
</CustomField>