force-app/main/default/objects/Local_Customer__c/fields/Account_2_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_2_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account 2 ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Local Customers 2</relationshipLabel>
    <relationshipName>Local_Customers2</relationshipName>
    <type>Lookup</type>
</CustomField>