force-app/main/default/objects/Local_Customer__c/fields/Account_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_2_Name__c</fullName>
    <formula>Account_2_ID__r.Name</formula>
    <label>Account 2 Name</label>
    <type>Text</type>
</CustomField>