force-app/main/default/objects/Local_Customer__c/fields/Account_3_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_3_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account 3 ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Local Customers 3</relationshipLabel>
    <relationshipName>Local_Customers1</relationshipName>
    <type>Lookup</type>
</CustomField>