force-app/main/default/objects/Local_Customer__c/fields/Account_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_3_Name__c</fullName>
    <formula>Account_3_ID__r.Name</formula>
    <label>Account 3 Name</label>
    <type>Text</type>
</CustomField>