force-app/main/default/objects/Local_Customer__c/fields/Account_3_URL__c.field-meta.xml
<CustomField>
    <fullName>Account_3_URL__c</fullName>
    <formula>(LEFT($Api.Partner_Server_URL_600, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_600)) &amp; &apos;lightning/r/Account/&apos; &amp; Account_3_ID__c &amp; &apos;/view&apos;)</formula>
    <label>Account 3 URL</label>
    <type>Text</type>
</CustomField>