force-app/main/default/objects/Local_Customer__c/fields/Recently_Updated__c.field-meta.xml
<CustomField>
    <fullName>Recently_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recently Updated</label>
    <type>Checkbox</type>
</CustomField>